<resources>
    <string name="title_home">Home</string>
    <string name="title_settings">Configurações</string>
    <string name="title_notifications">Notificações</string>
    <string name="welcome_label">Bem Vindo</string>
    <string name="anonymus_label">Anonymus</string>
    <string name="user_logo_description">User Logo</string>
    <string name="full_name_edit_label">Nome Completo</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Feminino</string>
    <string name="birth_label">Data de Nascimento</string>
    <string name="cpf_label">CPF</string>
    <string name="vehicle_licence_number_label">Número da CNH</string>
    <string name="vehicle_licence_label">1° Habilitação</string>
    <string name="vehicle_overnight_zip_label">CEP de pernoite do veículo</string>
    <string name="cancelar_label">Cancelar</string>
    <string name="salvar_label">Salvar</string>
    <string name="error_msg_field_empty">Campo obrigatório</string>
    <string name="civil_state_option_single">Solteiro</string>
    <string name="civil_state_option_married">Casado</string>
    <string name="request_label">Solicitar</string>
    <string name="yes_btn_label">Sim</string>
    <string name="no_btn_label">Não</string>
    <string name="exit_confirmation_discard_changes">Deseja sair e descartar as alterações?</string>
    <string name="select_option">Selecione uma opção</string>
    <string name="apply_label">Aplicar</string>
    <string name="year_hint">Ano(s)</string>
    <string name="month_hint">Mês(es)</string>
    <string name="year_manufacture_label">Ano de Fabricação</string>
    <string name="vehicle_year_model_label">Ano do Modelo</string>
    <string name="vehicle_model_label">Modelo do Veículo</string>
    <string name="vehicle_register_label">Placa:</string>
    <string name="vehicle_register_example_label">ABC01A0</string>
    <string name="quote_status_label">Status:</string>
    <string name="quote_status_example_label">Em analise</string>
    <string name="data_edit_label">Editar Dados</string>
    <string name="cancel_label">Cancelar</string>
    <string name="under_analysis_quote">Em Analise</string>
    <string name="vehicle_register_num_label">Placa</string>
    <string name="canceled_quote_status_label">Cancelada</string>
    <string name="approved_quote_status_label">Aprovada</string>
    <string name="finished_quote_status_label">Finalizada</string>
    <string name="undo_label">Desfazer</string>
    <string name="item_removed_label">Item removido</string>
    <string name="update_label">Atualizar</string>
    <string name="not_implemented_in_alpha_yet">Ainda não implementado nessa versão alpha</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Sync Preferences -->
    <string name="num_date_version_app">Versão: 1.0.0.alphav1 – 14/07/2020</string>
    <string name="app_description">APP IN Seguros - TCC FIAP 19MOB</string>

    <string name="com.crashlytics.useFirebaseAppId" translatable="false">true</string>
    <string name="dev_environment">Versão Desenvolvedor</string>
    <string name="qa_environment">Versão QA</string>
    <string name="enter_label">Entrar</string>
    <string name="login_in_seguros_label">Login IN Seguros</string>
    <string name="email_hint">Email</string>
    <string name="passwd_hint">Senha</string>
    <string name="dont_have_account_label">Não tem uma conta?</string>
    <string name="register_label">CADASTRE-SE</string>
    <string name="register_screen_subtitle">Cadastre-se para utilizar o nosso app</string>
    <string name="user_name_label">Nome</string>
    <string name="phone_number_label">Telefone</string>
    <string name="register_btn">Registrar-se</string>
    <string name="use_term_check_box_label">Ler e aceitar os termos de uso do app</string>
    <string name="use_term_title">Termos de Uso</string>
    <string name="use_term_content">Bla bla bla...</string>
    <string name="reject_btn_label">Rejeitar</string>
    <string name="accept_btn_label">Aceitar</string>
    <string name="read_use_terms_msg">Por favor, leia e aceite os termos de uso para prosseguir.</string>
    <string name="processing_request_msg">Processando a requisição</string>
    <string name="register_error_msg">Erro ao tentar registrar-se</string>
    <string name="proposal_sent_quote">Proposta Recebida</string>
    <string name="company_details_contact">Contato: %1$s</string>
    <string name="currency_symbol">R$ %1$s</string>
    <string name="cloud_sync_confirm_msg">Deseja sincronizar com a nuvem?</string>
    <string name="forgot_passwd_label">Esqueceu a senha?</string>
    <string name="reset_passwd_label">REDEFINIR</string>
    <string name="quotation">Cotação</string>
    <string name="edit">Editar</string>
    <string name="cancel_quotation_msg">Deseja cancelar a quotação</string>
    <string name="remove_item">Deseja excluir o item?</string>
    <string name="app_will_be_restart">O App será reiniciado!</string>
    <string name="error_find_quotation">Erro ao buscar cotação id:</string>
    <string name="unknown_error">Erro desconhecido.</string>
    <string name="please_insert_email">Por favor, digite o email.</string>
    <string name="login_error">Erro ao fazer login</string>
    <string name="user_or_pw_wrong">Usuário e/ou senha errada!</string>
    <string name="error_find_user">Erro ao buscar usuário.</string>
    <string name="wrong_email">Email enviado. Por favor, verifique sua caixa de entreda.</string>
    <string name="error_reset_pw">Erro ao tentar enviar email de recuperação de senha!</string>
    <string name="fill_genre">Selecione o genero</string>
    <string name="fill_civil_state">Selecione o estado civíl</string>
    <string name="fill_vehicle_brand">Selecione a marca do veículo</string>
    <string name="fill_all_fields">Preencha todos os campos obrigatórios</string>
    <string name="invalid_cpf">CPF inválido</string>
    <string name="quote_save_error">Erro ao tentar Salvar</string>
    <string name="cpf_format_error">Erro no formato do CPF</string>
    <string name="proposal">Proposta</string>
    <string name="proposal_received_msg">Olá, gostaria de receber mais informações sobre a proposta</string>
    <string name="thankyou">Obrigado</string>
    <string name="email_client_open_error">Erro ao tentar abrir cliente de email:</string>
    <string name="successfully_completed">Finalizado com sucesso.</string>
    <string name="sync_error">Erro ao tentar sincronizar!</string>
</resources>