<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.inseguros.ui.useterm.UseTermFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/use_term_title"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/use_term_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_term_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end">

                <Button
                    android:id="@+id/use_term_reject_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_red_button"
                    android:layout_margin="8dp"
                    android:text="@string/reject_btn_label"/>

                <Button
                    android:id="@+id/use_term_accept_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:layout_margin="8dp"
                    android:text="@string/accept_btn_label"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>