<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.quotes.car.QuoteCarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/quotes_car_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="..."
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:titleTextColor="@android:color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/quotes_car_toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/quote_car_icon_iv"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/quote_car_description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:text="..." />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/full_name_met"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name_edit_label"
                        app:met_textColorHint="@color/colorPrimaryDark"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/cpf_met"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cpf_label"
                        app:met_textColorHint="@color/colorPrimaryDark"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <RadioGroup
                        android:id="@+id/quote_car_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/male_label"/>

                        <RadioButton
                            android:id="@+id/female_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/female_label"/>

                    </RadioGroup>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/birth_met"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birth_label"
                        app:met_textColorHint="@color/colorPrimaryDark"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <Spinner
                        android:id="@+id/civil_state_spn"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/vehicle_licence_number_met"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_licence_number_label"
                        app:met_textColorHint="@color/colorPrimaryDark"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/vehicle_licence_time_met"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_licence_label"
                        app:met_textColorHint="@color/colorPrimaryDark"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/vehicle_overnight_zip_met"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_overnight_zip_label"
                        app:met_textColorHint="@color/colorPrimaryDark"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="16dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/cancel_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="8dp"
                            style="@style/button"
                            android:text="@string/cancelar_label"/>

                        <Button
                            android:id="@+id/save_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="8dp"
                            android:padding="8dp"
                            style="@style/button"
                            android:text="@string/salvar_label"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>