<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="12dp"
            app:srcCompat="@drawable/ic_calculate_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calc"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/vehicle_licence_time_dialog_year_met"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/year_hint"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/colorPrimaryDark" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/vehicle_licence_time_dialog_month_met"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/month_hint"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/vehicle_licence_time_dialog_apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:text="@string/apply_label"
        style="@style/button"/>

</LinearLayout>